...
    
    func fetchProfileAvatarURL() -> URL? {
          return self.getProfileAvatarURL()
      }

    func logOutButtonTapped() {
        alertService.showAlert(title: "Пока, пока", message: "Уверены, что хотите выйти?", buttonConfirmTitle: "Да", buttonDeclineTitle: "Нет")
        
    }
    
        func updateProfileDetails() {
            
            guard let profile = profileService?.profile else { return }
...
