...
            })
    }
    
    override func viewDidLoad() {
        super.viewDidLoad()
        
        webView.accessibilityIdentifier = "UnsplashWebView"
        presenter?.viewDidLoad()
        webView.navigationDelegate = self
    }
    
    func load(request: URLRequest) {
        webView.load(request)
...
